@@ -1504,7 +1504,7 @@ declare global {
         /**
          * The tick number this entity was created.
          */
-        creationTime: number;
+        creationTick: number;
     }
 
     type LitterType = "vomit" |
